--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -26,3 +26,8 @@
 
 %h1 Hello World
 %p Find me in app/views/home/index.html.erb
+
+.fa.fa-flag
+.fab.fa-amazon
+= link_to root_path do
+  .fa.fa-home
