--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -31,3 +31,7 @@
 .fab.fa-amazon
 = link_to root_path do
   .fa.fa-home
+= link_to courses_path, class: 'btn btn-success' do
+  .fa.fa-book
+  Courses
+  
