--- a/app/views/courses/_course.html.haml
+++ b/app/views/courses/_course.html.haml
@@ -1,15 +1,30 @@
 .card
   .card-header
-    .fa.fa-book
+    .fa.fa-graduation-cap
     = link_to course.title, course_path(course)
   .card-body
-    = course.description
+    %small= course.short_description
+  .card-footer  
+    .text-center
+      = number_to_currency course.price  
   .card-footer
-    .far.fa-clock
-    = course.created_at.strftime("%d-%b-%Y")
     .row
-    .fas.fa-chalkboard-teacher
-    = course.user
+      .col-md-6
+        .fa.fa-globe-europe
+        = course.language
+      .col-md-6  
+        .text-right
+          .fa.fa-signal
+          = course.level
+  .card-footer
+    .row
+      .col-md-6
+        .far.fa-clock
+        = course.created_at.strftime("%d-%b-%Y")
+      .col-md-6
+        .text-right
+          .fas.fa-chalkboard-teacher
+          = course.user
   .card-footer  
     = link_to 'Show', course, class: 'btn btn-sm btn-primary'
     = link_to 'Edit', edit_course_path(course), class: 'btn btn-sm btn-warning'
