--- a/app/views/courses/_form.html.haml
+++ b/app/views/courses/_form.html.haml
@@ -7,6 +7,10 @@
     = f.input :title
     = f.label :description
     = f.rich_text_area :description
-
+    %small= f.error :description, class: 'text-danger'
+    = f.input :short_description
+    = f.input :level, collection: [ "Beginner", "Intermediate", "Advanced"]
+    = f.input :language, priority: "English", collection: [ "English", "Polish", "French"]
+    = f.input :price
   .form-actions
     = f.button :submit
