--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,3 +1,31 @@
 .card-columns
   - @users.each do |user|
     = render 'users/user', user: user
+    
+= search_form_for @users do |f|
+  = f.search_field :email_cont
+  = f.submit
+  
+%table.table.table-bordered
+  %thead
+    %tr
+      %th id
+      %th email
+      %th created_at
+      %th= 'sign_in_count'.humanize 
+      %th= 'current_sign_in_at'.humanize
+      %th= 'last_sign_in_at'.humaize    
+      %th= 'current_sign_in_ip'.humanize
+      %th= 'last_sign_in_ip'.humanize
+  %tbody
+    - @users.each do |user|
+      %tr
+        %td= user.id
+        %td= user.email
+        %td= user.created_at
+        %td= user.sign_in_count
+        %td= user.current_sign_in_at
+        %td= user.last_sign_in_at
+        %td= user.current_sign_in_ip
+        %td= user.last_sign_in_ip
+      
