--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -21,9 +21,9 @@
     .row
     = 'last_sign_in_ip'.humanize
     = user.last_sign_in_ip
-    .card-footer
-      Confirmed email?
-      - if user.confirmed_at
-        .badge-.badge-success Yes
-      - else
-        .badge-.badge-danger No
+  .card-footer
+    Confirmed email?
+    - if user.confirmed_at
+      %span.badge-.badge-success Yes
+    - else
+      %span.badge-.badge-danger No
