--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -21,7 +21,7 @@
         %li.nav-item{class: "#{'active font-weight-bold' if current_page?(users_path)}"}
           = link_to users_path, class: 'nav-link' do
             .fa.fa-users
-            Users    
+            Users
       .form-inline.my-2.my-lg-0
         = search_form_for @ransack_courses, as: :courses_search, url: courses_path do |f|
           .input-group
@@ -30,10 +30,10 @@
               %button.btn.btn-primary.btn-sm{:type => "submit"}
                 %span.fa.fa-search{"aria-hidden" => "true"}
       %ul.navbar-nav.mr-right
-        %li.nav-item{class: "#{'active font-weight-bold' if current_page?(root_path)}"}
-          = link_to root_path, class: 'nav-link' do
-            .fa.fa-home
-            Another link
+        %li.nav-item{class: "#{'active font-weight-bold' if current_page?(activity_path)}"}
+          = link_to activity_path, class: 'nav-link' do
+            .fa.fa-bell
+            Activity
         %li.nav-item.dropdown
           %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
             %b= current_user.email
