--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,3 +1,9 @@
+%h3
+  .text-center
+    Users
+    .badge.badge-info
+      = @users.size
+%p
 .card-columns
   - @users.each do |user|
     = render 'users/user', user: user
